# helioy-bus

./: .fmm.db  .gitignore  PROJECT.md  README.md  SPEC.md  install.sh  justfile  pyproject.toml
hooks/: bus-register.sh  bus-unregister.sh  check-mail.sh
plugin/hooks/: bus-prune.sh  bus-register.sh  bus-unregister.sh  check-mail.sh  stop-check-mail.sh  token-capture.sh  token-watcher-stop.sh  token-watcher.sh
plugin/hooks/lib/: resolve-identity.sh
plugin/scripts/: warroom.sh
scripts/: agents.py  inboxes.py
server/: _db.py  _identity.py  _tmux.py  _warroom.py  bus_server.py  proxy.py  warroom_cli.py  warroom_server.py
tests/: conftest.py  test_bus_server.py  test_resolve_identity.sh  test_warroom_server.py
