[project]
name = "helioy-bus"
version = "0.1.0"
description = "Inter-agent message bus for Claude Code instances"
requires-python = ">=3.12"
dependencies = [
    "mcp-hmr",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
helioy-bus = "bus_server:mcp"
helioy-bus-initdb = "server._db:_initdb_cli"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
